[tool.poetry]
name = "eval_sb3"
version = "0.1.0"
description = "evaluate stable baselines"
authors = ["Hakan Dilek <hakandilek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
stable-baselines3 = "^1.5.0"
pyglet = "^1.5.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
